Add some noise, drop “web” from “web application”.

--- a/stylesheets/chaplin.css
+++ b/stylesheets/chaplin.css
@@ -1,6 +1,6 @@
 header {
-  background-color: #222;
-  background-image: none;
+  background-color: #ddd;
+  background-image: url(../images/black-noise.png);
   border-bottom: 6px solid #111;
 }
 
