--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -1,11 +1,13 @@
 body {
-  font: 16px/1.5 "Quattrocento Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #666;
   font-weight: 300;
   margin: 0px;
   padding: 0px 0 20px 0px;
   background: #F5F1E8;
 }
+
+/*"Quattrocento Sans", */
 
 h1, h2, h3, h4, h5, h6 {
   color: #333;
@@ -146,4 +148,14 @@ dt {
 
 small {
   font-size: 12px;
+}
+
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
 }
