--- a/stylesheets/chaplin.css
+++ b/stylesheets/chaplin.css
@@ -1,14 +1,79 @@
 header {
-  background-color: #333;
-  background-image: url(../images/noise.png);
-  border-bottom: 6px solid #111;
+  background-color: rgba(188, 122, 152, 0.95);
+  border-bottom: 6px solid #b86e9a;
+  height: 40px;
+  color: #fff;
+  font-family: 'Helvetica';
+  position: relative;
+  font-size: 18px;
+  font-weight: 100;
+  -webkit-font-smoothing: subpixel-antialiased;
+}
+
+header .list-wrapper {
+  width: 752px;
+  margin: 0 auto;
+  padding-top: 5px;
+}
+
+header {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  /*-webkit-filter: blur(8px) contrast(0.4) brightness(1.4);*/
+}
+
+
+header ul {
+  /*float: left;*/
+  padding-left: 1.125em;
+}
+
+header .logo > img {
+  margin-top: 7px;
+}
+
+
+header .logo-text {
+  text-transform: none;
+  margin-right: 15px;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+header li {
+  padding: 0 0.625em;
+  float: left;
+  list-style-type: none;
+  text-transform: uppercase;
+}
+
+header a {
+  color: #fff;
+}
+
+header a:hover {
+  color: #c4baa6;
+}
+
+header a.active {
+  color: #6fcecb;
 }
 
 header h1 {
-  font-size: 98px;
+  /*font-size: 98px;*/
   text-shadow: 2px 2px 3px #111;
 }
 
 header h1, header p {
-  color: #eee;
+  /*color: #eee;*/
+}
+
+.page-nav {
+  padding: 0;
+  margin: 0;
+  padding-left: 20px;
+}
+.page-nav li {
+  display: inline;
 }
