--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -255,3 +255,135 @@ footer {
     display: none;
   }
 }
+
+header {
+  background-color: rgba(188, 122, 152, 0.95);
+  border-bottom: 6px solid #b86e9a;
+  height: 40px;
+  color: #fff;
+  font-family: 'Helvetica';
+  position: relative;
+  font-size: 18px;
+  font-weight: 100;
+  -webkit-font-smoothing: subpixel-antialiased;
+}
+
+header .list-wrapper {
+  width: 752px;
+  margin: 0 auto;
+  padding-top: 5px;
+}
+
+header {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  /*-webkit-filter: blur(8px) contrast(0.4) brightness(1.4);*/
+}
+
+
+header ul {
+  /*float: left;*/
+  padding-left: 1.125em;
+}
+
+header .logo > img {
+  margin-top: 7px;
+}
+
+
+header .logo-text {
+  text-transform: none;
+  margin-right: 15px;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+header li {
+  padding: 0 0.625em;
+  float: left;
+  list-style-type: none;
+  text-transform: uppercase;
+}
+
+header a {
+  color: #fff;
+}
+
+header a:hover {
+  color: #c4baa6;
+}
+
+header a.active {
+  color: #6fcecb;
+}
+
+header h1 {
+  /*font-size: 98px;*/
+  text-shadow: 2px 2px 3px #111;
+}
+
+header h1, header p {
+  /*color: #eee;*/
+}
+
+.page-nav {
+  padding: 0;
+  margin: 0;
+  padding-left: 20px;
+}
+.page-nav li {
+  display: inline;
+}
+
+
+.example-screenshot {
+  text-align: center;
+}
+
+.compare-link-container {
+  position: relative;
+  visibility: hidden;
+}
+.compare-link {
+  position: absolute;
+  top: -60px;
+}
+
+.has-feature {
+  color: #39AE40;
+  text-align: center;
+}
+.hasnt-feature {
+  color: #FF5D55;
+  text-align: center;
+}
+
+.compare-builders tr td:last-child {
+  font-size: 12px;
+}
+
+.users {
+  text-align: center; }
+  .users img {
+    display: inline-block;
+    padding-right: 40px;
+    text-align: left; }
+
+.builders a {
+  display: inline-block;
+  margin: 0 1em 1em 0;
+  width: 9em;
+  height: 18px;
+  line-height: 1.2;
+}
+.builders img {
+  float: left;
+  margin-right: 1em;
+  border-radius: 0.2rem;
+}
+.builders .name {
+  font-weight: normal;
+  display: block;
+}
+
