--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,7 +13,7 @@
 <body>
   <div class="wrapper">
 
-<header>
+<header class="nav-header">
   <div class="list-wrapper">
     <ul class="page-nav">
       <li class="logo"><img width="30" src="http://chaplinjs.org/images/chaplin-hat.png" alt=""></li>
