--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -51,8 +51,8 @@
     if (re.test(location.href)) link.className += ' active';
   });
 
-  document.querySelector('.toggle-navigation').addEventListener('click', function() {
-    queryAll('.nav-toggle-content').forEach(function(item) {
+  document.querySelector('.page-nav .toggle-navigation').addEventListener('click', function() {
+    queryAll('.page-nav .nav-toggle-content').forEach(function(item) {
       var existing = window.getComputedStyle(item).display;
       var newStyle = (existing === 'none') ? 'list-item' : 'none';
       console.log(item, newStyle)
