--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -318,6 +318,11 @@ footer {
   display: block;
 }
 
+.author-avatar-text {
+  position: relative;
+  top: -15px;
+}
+
 @media only screen and (min-width: 750px) {
   .toggle-navigation {
     display: none;
