Add basic example.

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -331,6 +331,35 @@ footer {
   top: -15px;
 }
 
+.tabs {
+  margin-left: -15px;
+}
+
+.tabs > li {
+  display: inline-block;
+  padding: 5px;
+  margin: 5px;
+  background-color: #F5F1E8;
+  cursor: pointer;
+}
+
+.tabs > li:hover {
+  color: rgb(188, 122, 152);
+}
+
+.gist .gist-file {
+  display: none;
+}
+
+.gist .gist-file.selected {
+  display: block;
+}
+
+.basic-example {
+  width: 100%;
+  height: 275px;
+}
+
 @media only screen and (min-width: 750px) {
   .toggle-navigation {
     display: none;
